--- a/Style.css
+++ b/Style.css
@@ -65,7 +65,7 @@ header ul li a:hover
 .free-div
 {
 	margin-top: 200px;
-	margin-bottom: 300px;
+	margin-bottom: 30px;
 }
 #About
 {
@@ -85,6 +85,15 @@ header ul li a:hover
 	width: 60%;
 	height: 600px;
 	float: left;
+}
+
+.window
+{
+	text-align: justify-all;
+	border: 5px solid green;
+	border-radius: 16px;
+	display: inline-block;
+	padding: 15px;
 }
 
 .twitter
